src/objects/DRDW_Event__c.object
<CustomObject>
    <fields>
        <fullName>DRDW_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DRDW Activity</label>
        <referenceTo>DRDW_Capability__c</referenceTo>
        <relationshipLabel>DRDW Events</relationshipLabel>
        <relationshipName>DRDW_Events</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Dates_5_Day_Res__c</fullName>
        <label>Event Dates 5 Day Res</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Dates_7_Day_Res__c</fullName>
        <label>Event Dates 7 Day Res</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Dates__c</fullName>
        <label>Event Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Samples to Collect</fullName>
                </value>
                <value>
                    <fullName>Lab Work Required</fullName>
                </value>
                <value>
                    <fullName>Lab Challenge Preparation</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination Preparation</fullName>
                </value>
                <value>
                    <fullName>Lab Blood Serum Neutralization</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Challenge: Pre-Challenge Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Challenge: Post-Challenge Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Challenge: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination: Pre-Vaccination Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination: Post-Vaccination Titrations</fullName>
                </value>
                <value>
                    <fullName>Lab Vaccination: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: ELISA</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: PCR</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Western Blot</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Hematology</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Plasma Separation</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Blood: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs: PCR</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs: Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Swabs: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal: Isolations</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal: PCR</fullName>
                </value>
                <value>
                    <fullName>Lab Fecal: Other</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy: Process for shipment/retention</fullName>
                </value>
                <value>
                    <fullName>Lab Necropsy: Isolation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_UI__c</fullName>
        <label>Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>validation that I can only enter numeric, comma, or negative sign</description>
        <label>Frequency Backend</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Go_Sub_Activities__c</fullName>
        <label>GO Sub-Activities</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <formula>IF(DRDW_Activity__r.Related_Project__r.Idea_Name__c!=NULL,DRDW_Activity__r.Related_Project__r.Idea_Name__c,DRDW_Activity__r.Related_Project__r.Project_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <formula>TEXT(DRDW_Activity__r.DRDW_Request__r.Status__c)</formula>
        <label>Request Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Partially Assigned</fullName>
                </value>
                <value>
                    <fullName>Unassigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Title__c</fullName>
        <label>Study Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Type__c</fullName>
        <formula>TEXT(DRDW_Activity__r.DRDW_Request__r.Study_Type__c)</formula>
        <label>Study Type</label>
        <type>Text</type>
    </fields>
	 <fields>
        <fullName>Order__c</fullName>
        <formula>CASE( Event_Type__c, &apos;Obtain Animals&apos;, 1, &apos;Animal Arrival&apos;, 2,&apos;Select Animals&apos;,3,&apos;Randomize Animals&apos;,4,&apos;Acclimation&apos;,5,&apos;Drug Administration&apos;,6,&apos;Pre challenge&apos;,7,&apos;Challenge&apos;,8,&apos;Post Challenge&apos;,9,&apos;Vaccination&apos;,10,&apos;Immunization&apos;,11,&apos;Clinical Observations&apos;,12,&apos;Health Observation(s)&apos;,13,&apos;Blood Sample Collection&apos;,14,&apos;Tissue Sample Collection&apos;,15,&apos;Rectal temperatures&apos;,16,&apos;Fasting&apos;,17,&apos;Swabs&apos;,18,&apos;Fecal Sample&apos;,19,&apos;Ultrasound&apos;,20,&apos;Xrays&apos;,21,&apos;Measure Shedding&apos;,22,&apos;Abscess Exudate/Culture&apos;,23,&apos;Implants&apos;,24,&apos;Scoring&apos;,25,&apos;Euthanize&apos;,26,&apos;Necropsy&apos;,27,&apos;Final Study Day&apos;,28,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Capturing Title for GO Request</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ERL</fullName>
                </value>
                <value>
                    <fullName>GO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRDW Event</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>DRDW Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>